--- a/Next Image.html
+++ b/Next Image.html
@@ -24,11 +24,11 @@
 
 <a href="Third page.html">Next Image</a>
 <br>
-   <a href="index.html">Previous Image</a>
+   <a href="/First Image.html">Previous Image</a>
 
    <br>
     <br>
-    <a href="/Contents.html">Contents</a>
+    <a href="/index.html">Contents</a>
 </center>
 
 </body>
