--- a/Third page.html
+++ b/Third page.html
@@ -8,9 +8,9 @@
 <body>
     <center>
     <h1>Image of Beach</h1> 
-    <img src="./Images/Scenery.jpg" width="227" height="222" alt="Image of Beach">
+    <a href="https://images.pexels.com/photos/853199/pexels-photo-853199.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" target="_blank"><img src="./Images/Scenery.jpg" width="227" height="222" alt="Image of Beach"></a>
     <br>
-    <a href="https://images.pexels.com/photos/853199/pexels-photo-853199.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">Image Link</a>
+    <a href="https://images.pexels.com/photos/853199/pexels-photo-853199.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" target="_blank">Image Link</a>
 
     <p>Resolution of Image:-6000*4000 <br>
         Click on the above link to download &uarr;
@@ -20,7 +20,7 @@
 
     <br>
     <br>
-    <a href="/Contents.html">Contents</a>
+    <a href="/index.html">Contents</a>
 
     <br>
     <br>
